test_suite/tests/ui/borrow/empty_lifetimes.stderr
error: at least one lifetime must be borrowed
 --> tests/ui/borrow/empty_lifetimes.rs:5:22
  |
5 |     #[serde(borrow = "")]
  |                      ^^

error: failed to parse borrowed lifetimes: "  "
 --> tests/ui/borrow/empty_lifetimes.rs:7:22
  |
7 |     #[serde(borrow = "  ")]
  |                      ^^^^
